--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ nav ul.menu__list {
 
 
 .skills__line {
-    width: 100%;
+    width: 1136px;
     display: flex;
     justify-content: space-between;
 }
